add werhose service

--- a/src/app/utils/templates/resetPassword/html.ejs
+++ b/src/app/utils/templates/resetPassword/html.ejs
@@ -27,6 +27,9 @@
                 Reset Password
               </a>
               <p style="color: #999; font-size: 14px;">
+                This password reset link will expire in <strong>3 minutes</strong>.
+              </p>
+              <p style="color: #999; font-size: 14px;">
                 If you didn’t request a password reset, you can ignore this email.
               </p>
               <hr style="margin: 30px 0; border: none; border-top: 1px solid #eee;">
